new proj/src/objects/BMUserSecurity__c.object
<CustomObject>
    <fields>
        <fullName>APISubDomain__c</fullName>
        <description>BigMachines API Sub-Domain</description>
        <label>BigMachines API Sub-Domain</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APIUserName__c</fullName>
        <label>BigMachines API User Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APIUserPassword__c</fullName>
        <label>BigMachines API User Password</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminEmail__c</fullName>
        <label>Admin Email Address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BMSSLRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSL Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <label>BMUserSecurity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BMUS-{0000}</displayFormat>
        <label>BMUserSecurity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BMUserSecurities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>